faqs select all check box code changes

--- a/findly-builder/src/app/components/faq-source/faq-source.component.scss
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.scss
@@ -270,7 +270,8 @@
                             text-align: center;
                             margin: 5px;
                             padding: 10px;
-                            pointer-events: none;
+                            // pointer-events: none;
+                            cursor: pointer;
                         }
                         .accordion-content{   
                             .card-content{
