--- a/findly-builder/src/app/components/invoices/invoices.component.scss
+++ b/findly-builder/src/app/components/invoices/invoices.component.scss
@@ -98,6 +98,27 @@
                 line-height: 14px;
                 padding: 0 10px;
             }
+
+            .col_{               
+                cursor: pointer;         
+                .sortImg{                                                       
+                    position: static;
+                    &.upArrow {
+                        transform: none !important;
+                    }
+                    &.downArrow {
+                        transform: rotate(180deg) !important;
+                        top: -1px !important;
+                        position: relative;
+                    }
+                    &.assending{
+                        transform: rotate(180deg);
+                    }
+                    &.decending{
+                        transform: rotate(0deg);
+                    }
+                }            
+            }
         }
         .invoice-table-body{
             margin: 0;            
