--- a/findly-builder/src/app/components/usage-log/usage-log.component.html
+++ b/findly-builder/src/app/components/usage-log/usage-log.component.html
@@ -72,10 +72,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="col_ col-2 title d-flex align-items-center" (click)="sortBy('isResult')">
+                <div class="col_ col-2 title d-flex align-items-center" (click)="sortBy('results')">
                     <span class="d-flex align-items-center flex-column mr-1">
-                        <img  [ngClass]="getSortIconVisibility('isResult', 'down')" src="assets/icons/caretDown.svg" class="ml-1 sortImg downArrow">
-                        <img  [ngClass]="getSortIconVisibility('isResult', 'up')" src="assets/icons/caretDown.svg" class="ml-1 sortImg upArrow">
+                        <img  [ngClass]="getSortIconVisibility('results', 'down')" src="assets/icons/caretDown.svg" class="ml-1 sortImg downArrow">
+                        <img  [ngClass]="getSortIconVisibility('results', 'up')" src="assets/icons/caretDown.svg" class="ml-1 sortImg upArrow">
                       </span>
                       RESULTS 
                       <div class="ml-2 kr-sg-dropdowns type_sort_dropdown" #sourceFilter="ngbDropdown" ngbDropdown [container]="'body'" [autoClose]="true" [placement]="'bottom-right'">
@@ -84,13 +84,13 @@
                                 <img class="custom-dropdown-toggle-icon" src="assets/icons/Vector.svg">
                             </button>
                             <ul class="dropdown-menu content-menu type_sort_dropdown-content" ngbDropdownMenu>
-                                <li (click)="sourceFilter.close();filterTable('all','isResult')">
+                                <li (click)="sourceFilter.close();filterTable('all','results')">
                                     <span class="list-name">All</span>
-                                    <img [ngClass]="{'hide': filterSystem.isResultFilter !== 'all'}" src="assets/icons/check-blue.svg"></li>
-                                    <li *ngFor="let docType of isResultArr" (click)="sourceFilter.close();filterTable(docType,'isResult')">
+                                    <img [ngClass]="{'hide': filterSystem.resultsFilter !== 'all'}" src="assets/icons/check-blue.svg"></li>
+                                    <li *ngFor="let docType of resultsArr" (click)="sourceFilter.close();filterTable(docType,'results')">
                                         <span
                                             class="list-name">{{docType == false ? 'No' :(docType == true? 'Yes': '')}}</span><img
-                                            [ngClass]="{'hide': filterSystem.isResultFilter !== docType}" src="assets/icons/check-blue.svg"></li>                       
+                                            [ngClass]="{'hide': filterSystem.resultsFilter !== docType}" src="assets/icons/check-blue.svg"></li>                       
                             </ul>
                         </div>
                     </div>
@@ -114,7 +114,7 @@
                     </div>
                     <div class="col-2 title pl-3">{{usageLog.queryType}}</div>
                     <div class="col-2 title pl-3">{{usageLog.requestSource}}</div>
-                    <div class="col-2 title pl-3">{{usageLog.isResult?'Yes':'No'}}</div>
+                    <div class="col-2 title pl-3">{{usageLog.results?'Yes':'No'}}</div>
                     <div class="col-2 title pl-3">{{usageLog.createdOn  | dateFormatPipe: 'DD MMM YYYY h:mm a'}}</div>                             
                 </div>    
             </ng-container>
