--- a/findly-builder/src/app/components/facets/facets.component.html
+++ b/findly-builder/src/app/components/facets/facets.component.html
@@ -162,6 +162,9 @@
                 <ng-container *ngIf="(facets && facets.length)">
                     <div cdkDropList (cdkDropListDropped)="drop($event,facets)">
                         <div class="body_sec row m-0" cdkDrag *ngFor="let facet of facets | filter : [searchfacet, 'facetName']" [ngClass]="{'selected': (selcectionObj && selcectionObj.selectedItems && selcectionObj.selectedItems[facet._id])}">
+                            <div class="field_data" *cdkDragPreview>
+                                <div class="title text-truncate"></div>
+                              </div>
                             <div class="col-4 content withcheckbox">
                                 <div class="drag_drop_icon pl-2"><img src="assets/icons/drog_drop.svg"></div>
                                 <div class="kr-sg-checkbox p-0 m-0 adjust-checkbox-padding">
