--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -344,7 +344,7 @@
 					<img src="assets/icons/sidemenu/new-icons/team_management.svg" class="defaultIcon">
 					<img src="assets/icons/sidemenu/new-icons/team_management.svg" class="activeIcon">
 				</span>
-				<span class="linkTitle">Teams</span>
+				<span class="linkTitle">Team</span>
 			</div>
 
 			<!-- <div class="inside-menu-title">BILLING & USAGE</div>
