--- a/findly-builder/src/app/components/apps-home/apps-home.html
+++ b/findly-builder/src/app/components/apps-home/apps-home.html
@@ -199,7 +199,7 @@
   </div>
   <div class="modal-footer" [ngClass]="{'disabled': creatingInProgress}">
       <button type="button" class="kr-sg-button-secondary btn_lg" data-dismiss="modal" (click)="closeCreateApp()">Cancel</button>
-      <button   type="button" class="kr-sg-button-primary btn_lg"  data-dismiss="modal" (click)='validateSource()'>{{creatingInProgress?'Creating...':'Create'}}</button>
+      <button   type="button" class="kr-sg-button-primary btn_lg"  data-dismiss="modal" (click)='validateSource()'>Create</button>
   
   </div>
 </kr-modal>
