--- a/findly-builder/src/app/components/app-header/app-header.component.html
+++ b/findly-builder/src/app/components/app-header/app-header.component.html
@@ -195,7 +195,7 @@
                         </div>                                            
                     </div>
                 </li>
-                <li class="nav-item search-block show-search2">
+                <!-- <li class="nav-item search-block show-search2">
                     <div class="search_icon" [ngClass]="{'active-search-top' : showSearch}">
                         <img src="assets/icons/sidemenu/search.svg" (click)="showSearch=!showSearch;searchText=''">
                     </div>
@@ -205,7 +205,7 @@
                             <img src="assets/icons/search_gray.svg" class="search-icon">
                         </div>
                     </div>
-                </li>
+                </li> -->
                 <li class="nav-item help-icon">
                     <img src="assets/icons/sidemenu/help.svg">
                 </li>
