--- a/findly-builder/src/app/components/summary/summary.component.html
+++ b/findly-builder/src/app/components/summary/summary.component.html
@@ -143,14 +143,14 @@
             <!-- <div class="create_new_link">+ Create New</div> -->
           </div>
           <div class="header-data row m-0">
-            <div class="col-3 title">FAQS</div>
             <div class="col-3 title">CONTENT</div>
+            <div class="col-3 title">FAQS</div>
             <div class="col-3 title">ACTIONS</div>
             <div class="col-3 title">STRUCTURED DATA</div>
           </div>
           <div class="body-data row m-0" *ngFor="let indice of indices">
+            <div class="col-3 title">{{indice.contentPages}}</div>
             <div class="col-3 title">{{indice.approvedfaqs}}</div>
-            <div class="col-3 title">{{indice.contentPages}} Pages</div>
             <div class="col-3 title">{{indice.botActions}}</div>
             <div class="col-3 title">{{indice.structuredDataCount}}</div>
           </div> 
