height adjustment in content in customize and preview mode flikkering after click on enter live search showing some time issue fixed filters and pagination was applied then click on customize then staying same page and applied same filters refreshing when we click on boost not updating boot query analytics will show only in customize mode in bottom up

--- a/findly-builder/src/assets/web-kore-sdk/demo/custom/customFindly.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/custom/customFindly.css
@@ -282,9 +282,12 @@ img.logo-img{
   bottom: 6px;
 }
 
-.top-down-search-background-div .topdown-search-main-container .all-result-container .full-results-data-container .all-product-details .content-data-sec{
+.top-down-search-background-div .topdown-search-main-container .all-result-container .full-results-data-container .all-product-details .content-data-sec.if-customize-mode{
   max-height: calc(100vh - 311px) !important;
   /* /* max-height: calc(100vh - 380px) !important; if added filter */
+}
+.top-down-search-background-div .topdown-search-main-container .all-result-container .full-results-data-container .all-product-details .content-data-sec{
+  max-height: calc(100vh - 280px) !important;
 }
 .top-down-search-background-div .topdown-search-main-container .all-result-container .full-results-data-container .all-product-details .content-data-sec.filter-added{
    max-height: calc(100vh - 380px) !important; 
