Fix for FLY-2312 - Can't able to add StructuredData from Overview Page.

--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -845,7 +845,7 @@
   </ng-container>
 </kr-modal>
 
-<kr-modal modalType="center" modalClass="modal_popups_ import-structure-data" #addStructuredDataModalPop>
+<kr-modal modalType="center" modalClass="modal_popups_" #addStructuredDataModalPop>
   <app-add-structured-data [selectedSourceType]="selectedSourceType" (closeStructuredDataModal)="cancleSourceAddition($event)"></app-add-structured-data>
 </kr-modal>
 
