--- a/findly-builder/src/assets/web-kore-sdk/demo/custom/customFindly.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/custom/customFindly.css
@@ -290,9 +290,11 @@ img.logo-img{
   max-height: calc(100vh - 280px) !important;
 }
 .top-down-search-background-div .topdown-search-main-container .all-result-container .full-results-data-container .all-product-details .content-data-sec.filter-added{
-   max-height: calc(100vh - 380px) !important; 
+   max-height: calc(100vh - 318px) !important; 
 }
-
+.top-down-search-background-div .topdown-search-main-container .all-result-container .full-results-data-container .all-product-details .content-data-sec.filter-added.content-data-sec.if-customize-mode{
+  max-height: calc(100vh - 393px) !important; 
+}
 .show-all-results-outer-wrap .data-body-sec{
   height: calc(100vh - 260px);
 }
